# tir-embedded

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/tir_embedded/: parser.py
tests/: common.sh  run.sh
tests/cases/else/help/: out-expected.txt
tests/cases/else/rg-no-ascii/: run.sh
tests/cases/else/version/: out-expected.txt  run.sh
tests/cases/help/: out-expected.txt  run.sh
tests/cases/parse-file/: out-expected.txt  run.sh
tests/cases/parse-file0/: out-expected.txt  run.sh
tests/cases/parse-stdin/: out-expected.txt  run.sh
tests/cases/parse/file/: out-expected.txt  run.sh
tests/cases/parse/plain/: run.sh
tests/cases/parse/round-trip/: out-expected.txt  run.sh
tests/cases/parse/stdin/: out-expected.txt  run.sh
tests/cases/rg-no-ascii/: run.sh
tests/cases/round-trip/: out-expected.txt  run.sh
tests/cases/unparse/: out-expected.txt  run.sh
tests/data/: table-1.tir  table-2.tir  table.txt
