[project]
name = "tir-embedded"
description = "Embedded table <-> TIR converter backend for tirenvi"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OGAWA Keiji" }]
dependencies = []
scripts = { tir-embedded = "tir_embedded.cli:main" }

dynamic = ["version"]

[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
